# aws_apiGateway_FastApi-Lambda_dynamoDB_OpenTelemetry

./: .gitignore  README.md
grafana_dashboard/: metrics_traces.json
python_uv/: README.md  index.py  pyproject.toml
terraform/: apiGateway.tf  backend.tf  dynamoDB.tf  lambda.tf  main.tf  terraform.tfvars.example  variables.tf
