[project]
name = "python-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.43.2",
    "fastapi>=0.135.3",
    "mangum>=0.21.0",
    "requests>=2.33.1",
]

[dependency-groups]
dev = [
    "fastapi[standard]>=0.135.3",
]
