[project]
name = "python-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.43.2",
    "fastapi>=0.135.3",
    "mangum>=0.21.0",
    "opentelemetry-api>=1.41.1",
    "opentelemetry-exporter-otlp>=1.41.1",
    "opentelemetry-instrumentation-asgi>=0.62b1",
    "opentelemetry-instrumentation-botocore>=0.62b1",
    "opentelemetry-instrumentation-fastapi>=0.62b1",
    "opentelemetry-sdk>=1.41.1",
    "requests>=2.33.1",
]

[dependency-groups]
dev = [
    "fastapi[standard]>=0.135.3",
]
